# rules_rust_features_reproduction

./: .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE  cargo-bazel-lock.json
src/: main.rs
