[package]
edition = "2021"
name = "rules_rust_sqlx"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx.workspace = true

[workspace.dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "migrate"] }
